fixes #81 jumbotron text bleeding and adds more spacing around headings

--- a/Web/Content/body.less
+++ b/Web/Content/body.less
@@ -36,7 +36,6 @@ i {
 
 .jumbotron {
     background-color: rgba(0,0,0,0);
-    height: 200px;
     padding-top: 20px;
     padding-bottom: 0px;
     margin-bottom: 50px;
@@ -69,5 +68,7 @@ article {
             margin-right:auto;
         }
     }
+
+    margin-bottom: 70px;
 }
 
